<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="81dp">

    <!-- StretchType -->
    <TextView
            android:id="@+id/stretch_type_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/stretch_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    <Spinner
            android:id="@+id/stretch_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/stretch_type_text_view"
            app:layout_constraintLeft_toRightOf="@+id/stretch_type_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/stretch_type_text_view"/>

    <!-- MinMax -->
    <TextView
            android:id="@+id/min_red_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/min_red_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stretch_type_text_view"/>
    <TextView
            android:id="@+id/max_red_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_red_value"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/min_red_value_text_view"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
            android:id="@+id/min_green_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/min_green_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_red_value_text_view"/>
    <TextView
            android:id="@+id/max_green_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_green_value"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/min_green_value_text_view"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
            android:id="@+id/min_blue_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/min_blue_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_green_value_text_view"/>
    <TextView
            android:id="@+id/max_blue_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_blue_value"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/min_blue_value_text_view"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <SeekBar
            android:id="@+id/min_red_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            app:layout_constraintRight_toLeftOf="@+id/curr_min_red_text_view"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/min_red_value_text_view"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/min_red_value_text_view"
            android:layout_marginBottom="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/stretch_type_spinner"/>
    <SeekBar
            android:id="@+id/max_red_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/max_red_value_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/stretch_type_text_view"
            app:layout_constraintRight_toLeftOf="@+id/curr_max_red_text_view"
            app:layout_constraintTop_toTopOf="@+id/max_red_value_text_view"
            app:layout_constraintVertical_bias="1.0"/>
    <SeekBar
            android:id="@+id/min_green_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            app:layout_constraintRight_toLeftOf="@+id/curr_min_green_text_view"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/min_green_value_text_view"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/min_green_value_text_view"
            android:layout_marginBottom="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/stretch_type_spinner"/>
    <SeekBar
            android:id="@+id/max_green_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/max_green_value_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/stretch_type_text_view"
            app:layout_constraintRight_toLeftOf="@+id/curr_max_green_text_view"
            app:layout_constraintTop_toTopOf="@+id/max_green_value_text_view"
            app:layout_constraintVertical_bias="1.0"/>
    <SeekBar
            android:id="@+id/min_blue_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            app:layout_constraintRight_toLeftOf="@+id/curr_min_blue_text_view"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/min_blue_value_text_view"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/min_blue_value_text_view"
            android:layout_marginBottom="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/stretch_type_spinner"/>
    <SeekBar
            android:id="@+id/max_blue_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/max_blue_value_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/stretch_type_text_view"
            app:layout_constraintRight_toLeftOf="@+id/curr_max_blue_text_view"
            app:layout_constraintTop_toTopOf="@+id/max_blue_value_text_view"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:id="@+id/curr_min_red_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/min_red_value_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/min_red_value_text_view"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/curr_max_red_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/max_red_value_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/max_red_value_text_view"/>
    <TextView
            android:id="@+id/curr_min_green_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/min_green_value_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/min_green_value_text_view"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/curr_max_green_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/max_green_value_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/max_green_value_text_view"/>
    <TextView
            android:id="@+id/curr_min_blue_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/min_blue_value_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/min_blue_value_text_view"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/curr_max_blue_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/max_blue_value_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/max_blue_value_text_view"/>

    <!-- PercentClip -->
    <TextView
            android:id="@+id/percent_clip_min_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/min_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stretch_type_text_view"
            android:layout_marginStart="16dp"/>
    <TextView
            android:id="@+id/percent_clip_max_value_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_value"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/percent_clip_min_value_text_view"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"/>
    <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/percent_clip_min_seek_bar"
            android:layout_marginStart="0dp"
            app:layout_constraintRight_toLeftOf="@+id/curr_percent_clip_min_text_view"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/percent_clip_min_value_text_view"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/percent_clip_min_value_text_view"
            android:layout_marginBottom="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/stretch_type_spinner"/>
    <SeekBar
            android:id="@+id/percent_clip_max_seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/percent_clip_max_value_text_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/stretch_type_text_view"
            app:layout_constraintRight_toLeftOf="@+id/curr_percent_clip_max_text_view"
            app:layout_constraintTop_toTopOf="@+id/percent_clip_max_value_text_view"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:id="@+id/curr_percent_clip_min_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/percent_clip_min_value_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/percent_clip_min_value_text_view"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/curr_percent_clip_max_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/percent_clip_max_value_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/percent_clip_max_value_text_view"
            android:layout_marginEnd="16dp"/>

    <!-- StandardDeviation -->
    <TextView
            android:text="@string/standard_deviation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/std_dev_text_view"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/stretch_type_text_view"
            android:visibility="gone"/>
    <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/std_dev_seek_bar"
            app:layout_constraintTop_toTopOf="@+id/std_dev_text_view"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/std_dev_text_view"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            app:layout_constraintRight_toLeftOf="@+id/curr_std_dev_text_view"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/stretch_type_spinner"
            android:visibility="gone"/>
    <TextView
            android:id="@+id/curr_std_dev_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/std_dev_seek_bar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/std_dev_seek_bar"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
